--- a/package.json
+++ b/package.json
@@ -1,14 +1,25 @@
 {
   "name": "pql-parser",
   "version": "0.1.0",
-  "description": "",
+  "description": "Plot query language parsing library",
+  "main": "lib/index.js",
+  "files": [
+      "lib/",
+      "LICENSE",
+      "README.md"
+  ],
   "scripts": {
     "build": "tsc",
     "test": "jest"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+      "pql",
+      "node",
+      "parser",
+      "ast"
+  ],
+  "author": "Joey Shi",
+  "license": "MIT",
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "jest": "^29.7.0",
