--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "description": "Plot query language parsing library",
   "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "files": [
       "lib/",
       "LICENSE",
