--- a/package.json
+++ b/package.json
@@ -5,25 +5,29 @@
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "files": [
-      "lib/",
-      "LICENSE",
-      "README.md"
+    "lib/",
+    "LICENSE",
+    "README.md"
   ],
   "scripts": {
     "build": "tsc",
     "test": "jest"
   },
   "keywords": [
-      "pql",
-      "node",
-      "parser",
-      "ast"
+    "pql",
+    "node",
+    "parser",
+    "ast"
   ],
   "author": "Joey Shi",
   "license": "MIT",
   "devDependencies": {
+    "@types/d3": "^7.4.3",
     "@types/jest": "^29.5.12",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.2"
+  },
+  "dependencies": {
+    "d3": "^7.9.0"
   }
 }
