--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "pql-parser",
   "version": "0.2.6",
   "description": "Plot query language parsing library",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/joeyshi12/pql-parser.git"
+  },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
@@ -37,6 +41,10 @@
     "d3-axis": "^3.0.0",
     "d3-scale": "^4.0.2",
     "d3-selection": "^3.0.0",
-    "d3-shape": "^3.2.0"
+    "d3-shape": "^3.2.0",
+    "jest-environment-jsdom": "^29.7.0"
+  },
+  "engines": {
+    "node": ">=16"
   }
 }
