--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pql-parser",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "description": "Plot query language parsing library",
   "repository": {
     "type": "git",
@@ -41,8 +41,7 @@
     "d3-axis": "^3.0.0",
     "d3-scale": "^4.0.2",
     "d3-selection": "^3.0.0",
-    "d3-shape": "^3.2.0",
-    "jest-environment-jsdom": "^29.7.0"
+    "d3-shape": "^3.2.0"
   },
   "engines": {
     "node": ">=16"
