--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pql-parser",
   "version": "0.3.1",
-  "description": "Plot query language parsing library",
+  "description": "Plot query language parser",
   "repository": {
     "type": "git",
     "url": "https://github.com/joeyshi12/pql-parser.git"
@@ -26,22 +26,10 @@
   "author": "Joey Shi",
   "license": "MIT",
   "devDependencies": {
-    "@types/d3-array": "^3.2.1",
-    "@types/d3-axis": "^3.0.6",
-    "@types/d3-scale": "^4.0.8",
-    "@types/d3-selection": "^3.0.10",
-    "@types/d3-shape": "^3.1.6",
     "@types/jest": "^29.5.12",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2"
-  },
-  "dependencies": {
-    "d3-array": "^3.2.4",
-    "d3-axis": "^3.0.0",
-    "d3-scale": "^4.0.2",
-    "d3-selection": "^3.0.0",
-    "d3-shape": "^3.2.0"
   },
   "engines": {
     "node": ">=16"
